--- a/style.css
+++ b/style.css
@@ -390,15 +390,16 @@ main {
 }
 
 .section-2 {
-  padding: 40px 0;
+  padding: 80px 0;
   border-radius: 20px;
   border: 3px solid var(--primary-color);
-  margin: 20px auto;
+  margin: 20px auto 0 auto; /* margin bawah diubah jadi 0 */
   width: 100%;
   max-width: 95%;
   box-shadow: 0 10px 30px rgba(255, 144, 0, 0.1);
   background: var(--black-color);
 }
+
 
 .about-wrapper {
   display: flex;
